# gtk-hello

./: .gitignore  LICENSE  README.md  meson.build
data/: com.github.mafin.gtk-hello.appdata.xml  com.github.mafin.gtk-hello.desktop
src/: App-oop.vala  App-update-1.vala  Application.vala
